2011-10-06  Konstantin Scheglov  <scheglov@google.com>

        REGRESSION (r95852?): Disappearing Border on bugs.webkit.org attachments <table>
        https://bugs.webkit.org/show_bug.cgi?id=69296

        Reviewed by David Hyatt.
        
        Collapsed borders should not disappear.

        * fast/table/border-collapsing/cached-69296-expected.png: Added.
        * fast/table/border-collapsing/cached-69296-expected.txt: Added.
        * fast/table/border-collapsing/cached-69296.html: Added.

2011-10-06  Mark Pilgrim  <pilgrim@chromium.org>

        Test how media element TimeRange methods react to too few arguments
        https://bugs.webkit.org/show_bug.cgi?id=66532

        Reviewed by Adam Barth.

        * media/video-buffered-too-few-arguments-expected.txt: Added.
        * media/video-buffered-too-few-arguments.html: Added.

2011-10-06  Cary Clark  <caryclark@google.com>

        Unreviewed: Update all chromium-mac baseline images that differ only
        in their scrollbar appearance.

        * platform/chromium-mac/css1/basic/comments-expected.png:
        * platform/chromium-mac/css1/basic/containment-expected.png:
        * platform/chromium-mac/css1/basic/id_as_selector-expected.png:
        * platform/chromium-mac/css1/basic/inheritance-expected.png:
        * platform/chromium-mac/css1/box_properties/border-expected.png:
        * platform/chromium-mac/css1/box_properties/border_bottom-expected.png:
        * platform/chromium-mac/css1/box_properties/border_bottom_width-expected.png:
        * platform/chromium-mac/css1/box_properties/border_left-expected.png:
        * platform/chromium-mac/css1/box_properties/border_left_width-expected.png:
        * platform/chromium-mac/css1/box_properties/border_right_inline-expected.png:
        * platform/chromium-mac/css1/box_properties/border_right_width-expected.png:
        * platform/chromium-mac/css1/box_properties/border_style-expected.png: