@@ -1,3 +1,13 @@
+2011-10-06  Mark Pilgrim  <pilgrim@chromium.org>
+
+        Test how filesystem methods react to too few arguments
+        https://bugs.webkit.org/show_bug.cgi?id=66538
+
+        Reviewed by Darin Adler.
+
+        * fast/filesystem/filesystem-missing-arguments-expected.txt: Added.
+        * fast/filesystem/filesystem-missing-arguments.html: Added.
+
 2011-10-06  Konstantin Scheglov  <scheglov@google.com>
 
         REGRESSION (r95852?): Disappearing Border on bugs.webkit.org attachments <table>
